hphp/hack/test/typecheck/constraints/gen7.php.exp
File "gen7.php", line 23, characters 17-20:
Some type constraint(s) here are violated (Typing[4323])
File "gen7.php", line 21, characters 9-9:
'T' is a constrained type parameter
File "gen7.php", line 23, characters 19-19:
Expected D
File "gen7.php", line 21, characters 30-30:
  via this generic T
File "gen7.php", line 21, characters 16-16:
But got C
File "gen7.php", line 21, characters 16-16:
Considering that this type argument is invariant with respect to A
File "gen7.php", line 23, characters 19-19:
Typing error (Typing[4110])
File "gen7.php", line 23, characters 19-19:
Expected D
File "gen7.php", line 21, characters 30-30:
  via this generic T
File "gen7.php", line 21, characters 16-16:
But got C
File "gen7.php", line 21, characters 16-16:
Considering that this type argument is invariant with respect to A
